--- a/src/main/resources/template/user.html
+++ b/src/main/resources/template/user.html
@@ -109,7 +109,8 @@
                                 <td>
                                     <p>例：1990/01/01</p>
                                     <div class="field" th:classappend="${errors.hasError('dateOfBirth')} ? 'error'">
-                                        <input type="text" name="dateOfBirth" th:value="${form.dateOfBirth}"/>年
+                                        <input type="text" name="dateOfBirth" th:value="${form.dateOfBirth}"/>
+                                        <p>年</p>
                                         <p th:if="${errors.hasError('dateOfBirth')}"
                                            th:text="${errors.getMessage('dateOfBirth')}" class="error-message">
                                         </p>
