--- a/src/main/resources/template/index.html
+++ b/src/main/resources/template/index.html
@@ -36,7 +36,7 @@
                     <img src="/img/icon_treatLady.png">
                     <p class="index-text" style="top:10px;">★病気、ケガに備える</p>
                     <p class="index-text" style="top:20px;">★女性特有の病気への特約つき</p>
-                    <p class="index-text" style="top:30px;" font-color="red">★女性限定</p>
+                    <p class="index-text" style="top:30px;"><font color="red" size="+1">★女性限定</font></p>
                     <a href="/action/order/accept?insuranceType=treatLady" class="index-button"
                        style="top:42px; background-color: #B40404;">
                         申し込み
