--- a/src/main/resources/template/user.html
+++ b/src/main/resources/template/user.html
@@ -230,10 +230,20 @@
                                     <label>ご職業</label>
                                     <p style="color:red;">＊</p></td>
                                 <td>
-                                    <div th:each="item : ${jobTypes}" class="field"
-                                         th:classappend="${errors.hasError('job')} ? 'error'">
-                                        <input type="radio" name="job" th:value="${item.code}" th:text="${item.label}"
-                                               th:field="*{job}" th:checked="${form.job}==${item.code}"/>
+                                    <div class="field" th:classappend="${errors.hasError('job')} ? 'error'">
+                                        <select name="job">
+                                            <option th:value="経営自営">経営・自営業</option>
+                                            <option th:value="会社員">会社員</option>
+                                            <option th:value="契約派遣">契約・派遣社員</option>
+                                            <option th:value="公務員">公務員</option>
+                                            <option th:value="民間団体">民間団体</option>
+                                            <option th:value="主婦">主婦</option>
+                                            <option th:value="学生">学生</option>
+                                            <option th:value="年金受給">年金受給者の方</option>
+                                            <option th:value="パートアルバイト">パート・アルバイト</option>
+                                            <option th:value="他有職">その他（有職）</option>
+                                            <option th:value="他無職">その他（無職）</option>
+                                        </select>
                                     </div>
                                     <p th:if="${errors.hasError('job')}" th:text="${errors.getMessage('job')}"
                                        class="error-message">
