テキストボックス位置調整

--- a/src/main/resources/template/user.html
+++ b/src/main/resources/template/user.html
@@ -54,8 +54,7 @@
                             </tr>
                             <tr>
                                 <td style="white-space: nowrap;">
-                                    <label>お名前（カタカナ）</label>
-                                    <p style="color:red;">＊</p>
+                                    <label>お名前（カタカナ）<font color="red">＊</font></label>
                                 </td>
                                 <td>
                                     <p>例：ティーアイエス　タロウ</p>
