--- a/src/main/resources/template/user.html
+++ b/src/main/resources/template/user.html
@@ -39,7 +39,7 @@
                             <tbody>
                             <tr>
                                 <td>
-                                    <label>お名前（漢字）</label>
+                                    <label>お名前（漢字）<font color="red">＊</font></label>
                                     <p style="color:red;">＊</p>
                                 </td>
                                 <td>
@@ -68,8 +68,7 @@
                             </tr>
                             <tr>
                                 <td>
-                                    <label>お名前（ローマ字）</label>
-                                    <p style="color:red;">＊</p>
+                                    <label>お名前（ローマ字）<font color="red">＊</font></label>
                                 </td>
                                 <td>
                                     <p>例：TIS TAROU</p>
@@ -83,8 +82,7 @@
                             </tr>
                             <tr>
                                 <td>
-                                    <label>性別</label>
-                                    <p style="color:red;">＊</p>
+                                    <label>性別<font color="red">＊</font></label>
                                 </td>
                                 <td>
                                     <div th:each="item : ${genderTypes}" class="field"
@@ -102,8 +100,7 @@
                             </tr>
                             <tr>
                                 <td>
-                                    <label>生年月日（半角）</label>
-                                    <p style="color:red;">＊</p>
+                                    <label>生年月日（半角）<font color="red">＊</font></label>
                                 </td>
                                 <td>
                                     <p>例：1990/01/01</p>
@@ -117,8 +114,7 @@
                             </tr>
                             <tr>
                                 <td>
-                                    <label>郵便番号（半角）</label>
-                                    <p style="color:red;">＊</p>
+                                    <label>郵便番号（半角）<font color="red">＊</font></label>
                                 </td>
                                 <td>
                                     <p>例：123-4567</p>
@@ -132,8 +128,7 @@
                             </tr>
                             <tr>
                                 <td>
-                                    <label>ご住所（全角）</label>
-                                    <p style="color:red;">＊</p>
+                                    <label>ご住所（全角）<font color="red">＊</font></label>
                                 </td>
                                 <td>
                                     <p>例：東京都新宿区西新宿８－１７－１</p>
@@ -147,8 +142,7 @@
                             </tr>
                             <tr>
                                 <td>
-                                    <label>自宅電話番号（半角）</label>
-                                    <p style="color:red;">＊</p>
+                                    <label>自宅電話番号（半角）<font color="red">＊</font></label>
                                 </td>
                                 <td>
                                     <p>例：00-1111-2222</p>
@@ -162,8 +156,7 @@
                             </tr>
                             <tr>
                                 <td>
-                                    <label>携帯電話番号（半角）</label>
-                                    <p style="color:red;">＊</p>
+                                    <label>携帯電話番号（半角）<font color="red">＊</font></label>
                                 </td>
                                 <td>
                                     <p>例：080-0000-0000</p>
@@ -179,8 +172,7 @@
                             </tr>
                             <tr>
                                 <td>
-                                    <label>メールアドレス（半角）</label>
-                                    <p style="color:red;">＊</p>
+                                    <label>メールアドレス（半角）<font color="red">＊</font></label>
                                 </td>
                                 <td>
                                     <p>例：sample@docomo.ne.jp</p>
@@ -194,8 +186,7 @@
                             </tr>
                             <tr>
                                 <td>
-                                    <label>配偶者有無</label>
-                                    <p style="color:red;">＊</p>
+                                    <label>配偶者有無<font color="red">＊</font></label>
                                 </td>
                                 <td>
                                     <div th:each="item : ${marriedTypes}" class="field"
@@ -211,8 +202,7 @@
                             </tr>
                             <tr>
                                 <td>
-                                    <label>昨年の所得（半角）</label>
-                                    <p style="color:red;">＊</p>
+                                    <label>昨年の所得（半角）<font color="red">＊</font></label>
                                 </td>
                                 <td>
                                     <div class="field" th:classappend="${errors.hasError('income')} ? 'error'">
@@ -226,8 +216,7 @@
                             </tr>
                             <tr>
                                 <td>
-                                    <label>ご職業</label>
-                                    <p style="color:red;">＊</p></td>
+                                    <label>ご職業<font color="red">＊</font></label></td>
                                 <td>
                                     <div class="field" th:classappend="${errors.hasError('job')} ? 'error'">
                                         <select name="job">
@@ -269,8 +258,8 @@
                             </tr>
                             <tr>
                                 <td>
-                                    <label>過去5年以内に、病気やケガで7日間以上にわたって医師の診察・検査・治療・投薬をうけたことがありますか</label>
-                                    <p style="color:red;">＊</p>
+                                    <label>過去5年以内に、病気やケガで7日間以上にわたって医師の診察・検査・治療・投薬をうけたことがありますか<font color="red">＊</font></label>
+
                                 </td>
                                 <td>
                                     <div th:each="item : ${treatedTypes}" class="field"
